--- a/public/stylesheet/stylesheet.css
+++ b/public/stylesheet/stylesheet.css
@@ -63,6 +63,86 @@ input[type="search"].form-control, input[type="tel"].form-control, input[type="c
 	font-size: 12px;
 	height: 30px;
 }
+
+.product-details .caption h2{
+	font-size: 24px;
+	margin-bottom: 2rem;
+}
+
+.product-details .caption h3{
+	margin-bottom: 2rem;
+}
+
+.product-details .caption h4 {
+	color: #af1a31;
+	font-size: 18px;
+	margin-bottom: 2rem;
+}
+
+.product-details .caption h5 {
+	font-weight: bold;
+	margin-bottom: 1rem;
+}
+
+.product-details .caption h5 span {
+	font-weight: 300;
+}
+
+.product-details .caption .product-block-inner {
+	border-color: black;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 3px;
+}
+
+.product-details .addtocart {
+	width: 200px;
+    height: 40px;
+    font-size: 18px;
+	font-family: "GT-Eesti 4r",Arial,sans-serif;
+    color: #fff;
+    border: 1px solid #af1a31;
+    background: #af1a31;
+    text-transform: capitalize;
+}
+
+.product-image .product-image_title {
+	position: absolute !important;
+	background: gray;
+	width: 100%;
+    font-size: 12px;
+    left: 0;
+    opacity: 0.8;
+    padding: 1rem 2rem;
+}
+
+.product-image .product_price {
+	position: absolute !important;
+	background: gray;
+    font-size: 12px;
+	left: 10px;
+	bottom: 10px;
+    opacity: 0.8;
+    padding: 1rem;
+}
+
+.subset-qty {
+	font-size: 18px;
+	color: #444;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	display: flex;
+	justify-content: left;
+	align-items: center;
+}
+
+.subset-qty .qty-legacy-ie {
+	font-size: 18px;
+	color: #444;
+	margin-right: 1rem;
+}
+
 #content.col-sm-9 a:hover {color:#EAAB00;}
 #content.col-sm-9 a {color: #000;}
 /* Fix some bootstrap issues */
@@ -277,7 +357,7 @@ header .container {
 	width: 100%;
 }
 #top {
-	background-color: #232f3e;
+	background-color: #b2001a;
 	padding: 0;
 	margin: 0;
 	min-height: 35px;
